  information will be very useful because it will list
  all the strings which were updated or added. If you
  encounter a modified string, please look in the 
  reference (english) file to see if you existing
  translation is still valid and update if appropriate.

  [U] = updated, [+] = added, [-] = removed

  ====================================================

  10-13-2003 - settings
    [+] strAdminCheckDevBuilds

  08-19-2003 - settings
    [+] strWarningPHP5beta
    [+] strPhpBug24652

  07-29-2003 - default
    [+] strCollectedYesterday
    [+] strCollectedRange

  07-29-2003 - settings
    [u] strAdminFullName
    [u] strAdminEmail
    [u] strCompanyName

  07-28-2003 - settings
    [u] strLanguageSelection
    [u] strDatabaseSettings
    [u] strAdminSettings
    [u] strAdvancedSettings
    [+] strLicenseInformation
    [+] strAdministratorAccount
    [+] strDatabasePage
    [+] strInstallWarning
    [+] strCongratulations
    [+] strInstallFailed
    [+] strInstallMessageAdmin
    [+] strInstallMessageDatabase
    [u] strDatabaseSettings

  07-27-2003 - settings
    [+] strSpecifyAdmin
    [+] strSpecifyLocation
    [u] strWarningPHPversion
    [+] strWarningMagicQuotesSybase
    [+] strCacheLockedDetected
    [+] strRevCorrupt
    [+] strRevTooOld
    [+] strRevMissing
    [+] strRevCVS
    [+] strInstallMessageCheck

  06-09-2003 - settings
    [+] strGeotrackingLocationNoHTTP
    [u] strCouldNotConnectToDB

  05-22-2003 - default
    [+] strAppendType
    [+] strAppendHTMLCode
    [+] strAppendWhat
    [+] strAppendZone
    [+] strAppendErrorZone
    [+] strAppendBanner
    [+] strAppendErrorBanner
    [+] strAppendKeyword
    [+] strAppendErrorKeyword
    [-] strZoneAppendType
    [-] strZoneAppendHTMLCode
    [-] strZoneAppendZoneSelection

  05-20-2003 - settings
    [+] strPhpBug20144

  05-08-2003 - default
    [+] strUseQuotes

  04-03-2003 - default
    [+] strCollectedAll
    [+] strCollectedToday
    [+] strCollected7Days