@@ -50,7 +50,7 @@ English
 	---------------------------------------------------------
 	Maintained by:	   Niels Leenheer (niels at phpadsnew dot com)
 	Is up-to-date?	   Always
-	Last update:	   13 October 2003
+	Last update:	   28 October 2003
 	Translated files:  7
 	---------------------------------------------------------
 
@@ -109,7 +109,7 @@ Indonesian
 Italian
 	---------------------------------------------------------
 	Maintained by:	   Matteo Beccati (matteo at phpadsnew dot com)
-	Is up-to-date?	   Yes
+	Is up-to-date?	   No
 	Last update:	   13 October 2003
 	Translated files:  7 + 3 resource files
 	---------------------------------------------------------
